# ZRTC

./: .gitignore  CMakeLists.txt  TODO  index.html  main.cpp  misc.txt  readme.md  vcpkg.json  version.txt
.cache/clangd/index/: Conf.cpp.218819B4143F41D9.idx  Conf.h.E8902F8D7AE951ED.idx  main.cpp.86CF4FC35C307C10.idx
.github/workflows/: .gitlab-ci.yml  black.yml  blank.yml
conf/: test.properties
logs/: basic.txt
src/conf/: Conf.cpp  Conf.h
test/: AsyncLog.cpp  CMakeLists.txt
